objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Baby_Junior__c</fullName>
        <label>Baby Junior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcodes__c</fullName>
        <label>Barcodes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <label>Class ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Brand__c</fullName>
        <label>Department Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_VPN__c</fullName>
        <label>Primary VPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Line__c</fullName>
        <label>Sub Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subclass_ID__c</fullName>
        <label>Subclass ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subclass_Name__c</fullName>
        <label>Subclass Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Class__c</fullName>
        <label>Supplier Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Sub_Class__c</fullName>
        <label>Supplier Sub Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>